# heimdall-astro

./: .gitignore  .gitmodules  README  configure.ac  configure.in  cudalt.py
Applications/: Candidates.C  Makefile.am  candidate_profiler.C  coincidencer.C  generate_dmlist.C  heimdall.C
Applications/hd/: Candidates.h
Formats/: Makefile.am  PSRDadaRingBuffer.C  SigprocFile.C
Formats/hd/: SigprocFile.h
Network/: Makefile.am  Socket.C
Pipeline/: Makefile.am  clean_filterbank_rfi.cu  clean_filterbank_rfi.cu.cpp  clean_filterbank_rfi.dp.cpp  default_params.C  error.C  find_giants.cu  find_giants.cu.cpp  find_giants.dp.cpp  get_rms.dp.cpp  label_candidate_clusters.cu.cpp  label_candidate_clusters.dp.cpp  matched_filter.cu.cpp  matched_filter.dp.cpp  measure_bandpass.cu  measure_bandpass.dp.cpp  median_filter.cu  median_filter.dp.cpp  merge_candidates.cu.cpp  merge_candidates.dp.cpp  outtakes.C  parse_command_line.C  pipeline.cu  pipeline.cu.cpp  pipeline.dp.cpp  remove_baseline.cu  remove_baseline.dp.cpp
Pipeline/dpct/: device.hpp  memory.hpp
Pipeline/dpct/dpl_extras/: iterators.h  memory.h  vector.h
Pipeline/hd/: are_coincident.cuh  are_coincident.dp.hpp  cached_allocator.cuh  cached_allocator.dp.hpp  clean_filterbank_rfi.h  discard_iterator.hpp  error.h  find_giants.h  get_rms.h  label_candidate_clusters.h  matched_filter.h  measure_bandpass.h  median_filter.h  merge_candidates.h  params.h  permutation_iterator.hpp  pipeline.h  remove_baseline.h  rng.dp.hpp  rng.hpp  strided_range.h  types_on_device.dp.hpp  utils.dp.hpp  utils.hpp  write_time_series.h
Pipeline/hd/utils/: ThreadPool.h  argument_wrapper.dp.hpp  buffer_iterator.dp.hpp  closure_with_source_string.dp.hpp  copy_if.dp.hpp  device_to_host_copy.dp.hpp  device_vector_wrapper.dp.hpp  discard_iterator_wrapper.dp.hpp  external_function.dp.hpp  func_with_source_string.dp.hpp  meta_kernel.dp.hpp  operators.dp.hpp  reduce_by_key.dp.hpp  reduce_by_key_with_scan.dp.hpp  scan_on_gpu.dp.hpp  scatter_if.dp.hpp  transform_if.dp.hpp  type_defines.dp.hpp  wrappers.dp.hpp
Scripts/: peryton_detector.py  trans_cand_server.py  trans_freqplus_plot.py  trans_gen_overview.py
config/: package.m4  psrdada.m4
